tests/paczka2/big_fuzzy/47918379.err
Error in line 6: PCYN S845 -1,3
Error in line 18: eX2OPW S367 125,7
Error in line 19: eX2OPW S845 32,3
Error in line 28: ZdOivX S609 21,8
Error in line 32: hRg8ee A479 74,4
Error in line 47: hRg8ee S367 101,6
Error in line 58: ZdOivX S845 96,9
Error in line 62: ZdOivX S367 63,0
Error in line 67: PCYN S845 37,9
Error in line 87: z0fMT0Qj A479 66,4
Error in line 84: S367 A479 178,8
Error in line 101: PCYN S609 280,1
Error in line 119: z0fMT0Qj S845 13,3
Error in line 118: PCYN S845 12,7
Error in line 123: PCYN S367 44,3
Error in line 115: eX2OPW S609 64,3
Error in line 129: ZdOivX S845 36,7
Error in line 131: PCYN S609 51,6
Error in line 141: PCYN A479 35,8
Error in line 144: eX2OPW A479 34,0
Error in line 145: S367 S845 68,2
Error in line 154: ZdOivX S609 48,0
Error in line 161: PCYN S845 37,9
Error in line 150: hRg8ee A479 10,2
Error in line 184: PCYN A479 75,7
Error in line 194: z0fMT0Qj S609 302,2
Error in line 177: ZdOivX S845 122,1
Error in line 198: hRg8ee A479 71,8
Error in line 203: 8n8Hn A479 91,8
Error in line 214: PCYN S367 20,0
Error in line 233: ZdOivX S609 97,1
Error in line 230: 8n8Hn S609 60,5
Error in line 238: PCYN A479 62,6
Error in line 226: hRg8ee S845 88,5
Error in line 241: hRg8ee S609 65,6
Error in line 249: z0fMT0Qj A479 41,70
